[package]
name = "combustion-tools"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
include_dir = "0.7"
fatfs = "0.3"
wasm-bindgen = "0.2.100"
serde = "1.0.228"
serde_norway = "0.9.42"
js-sys = "0.3.85"
serde_derive = "1.0.228"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
